--- a/heros.html
+++ b/heros.html
@@ -9,6 +9,48 @@
     <title>Héros</title>
 </head>
 <body>
+
+    <header>
+        <!--header mobile-->
+        <nav id="navigation-web">
+            <div class="container d-flex justify-content-between align-items-center fs-15">
+                <div class="py-3"id="logo" >
+                    <img id="logo1"src="./assets/images/Logo/logo1.png" alt="sayna">
+                    <img id="logo1" src="./assets/images/Logo/logo2.png" alt="sayna">
+                    <img id="logo1" src="./assets/images/Logo/logo3.png" alt="sayna">
+                </div>
+                <div class="fw-15">
+                    <ul class="list-inline ">
+                        <li class="list-inline-item px-3 "><a  href="index.html"> <b>Acceuil</b></a></li>
+                        <li class="list-inline-item px-3"><a  href="adversaire.html"><b>Adversaire</b> </a></li>
+                        <li class="list-inline-item px-3"><a href="heros.html"><b>Héros</b>  </a></li>
+                        <li class="list-inline-item px-3"><a href="Apropos.html"> <b>A propos</b> </a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+
+        <!-- header version web-->
+        <nav id="navigation-mobile">
+            <div class="container d-flex text-center">
+                <div class="py-3">
+                    <img src="./assets/images/Logo/logo1.png" alt="sayna">
+                    <img src="./assets/images/Logo/logo2.png" alt="sayna">
+                    <img src="./assets/images/Logo/logo3.png" alt="sayna">
+                </div>
+                <div class="fw-15">
+                    <ul class="list-inline ">
+                        <li class="list-inline-item px-3"><a  href="#"> <b>Acceuil</b></a></li>
+                        <li class="list-inline-item px-3"><a  href="#"> Acceuil</a></li>
+                        <li class="list-inline-item px-3"><a href="#"> Acceuil</a></li>
+                        <li class="list-inline-item px-3"><a href="#"> Acceuil</a></li>
+                    </ul>
+                </div>
+
+            </div>
+        </nav>
+</header>
     <main>
         <!--section1 sur l'image 1-->
         <section class="section1-spide-noir">
@@ -20,7 +62,7 @@
             </div>
         </section>
 
-        <!--deuwième section-->
+        <!--deuwième section couleur fond bleu-->
         <section class="section2-spide-bleu"> 
             <div class="container">
                 <div class="row">
@@ -45,11 +87,15 @@
 
         <!--mise en forme 3em section-->
         <section class="section-spide-fondation">
+            <div class="container">
+                <h1>Fondations Solide</h1>
+                <h2>De quoi est il vraiment capable</h2>
+            </div>
 
         </section>
 
         <!--mise en forme 3em section-->
-        <section>
+        <section class="section3-fond-bleu">
             <div class="container">
                 <div class="row">
                     <div class="row col-12">
@@ -109,9 +155,9 @@
                 </div>
         </section>
 
-        <!--4em section image multiple-->
-        <section>
-            <div class="container-fluid m-0 p-0 section4">
+        <!--4em section image multiple fond rouge-->
+        <section class="section4-fond-rouge">
+            <div class="container-fluid m-0 pt-3 section4">
                 <div class="row">
                     <div class="row col">
                         <!--on le divise en 2 colonne de col-6-->
