--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
     crossorigin="anonymous">
@@ -23,10 +24,10 @@
                 </div>
                 <div class="fw-15">
                     <ul class="list-inline ">
-                        <li class="list-inline-item px-3 "><a  href="#"> <b>Acceuil</b></a></li>
-                        <li class="list-inline-item px-3"><a  href="#"> Adversaire</a></li>
-                        <li class="list-inline-item px-3"><a href="heros.html"> Héros</a></li>
-                        <li class="list-inline-item px-3"><a href="#"> A propos</a></li>
+                        <li class="list-inline-item px-3 "><a  href="index.html"> <b>Acceuil</b></a></li>
+                        <li class="list-inline-item px-3"><a  href="adversaire.html"><b>Adversaire</b> </a></li>
+                        <li class="list-inline-item px-3"><a href="heros.html"><b>Héros</b>  </a></li>
+                        <li class="list-inline-item px-3"><a href="Apropos.html"> <b>A propos</b> </a></li>
                     </ul>
                 </div>
 
@@ -52,7 +53,7 @@
 
             </div>
         </nav>
-
+</header>
         <!--début de la section main-->
      <main>
         <section   class=" section1 p-10">
@@ -135,23 +136,51 @@ Game, combattant au côté des Avengers.
 
             <!--section 4  spidermanan en bleu-->
             <section id="spide-blue">
-                <div class="conatiner" >
-                    <h3>DEVIENS UN SPIDERMAN</h3>
-                    <p>Remplir les formulaires ci-dessous afin d'avoir ton propre constume</p>
-                        <div class="col-4  spide-formulaire text-center">
+                    <div class="conatiner" >
+                        <div class=" " style="position: relative; "> 
+
+                            <h3 >DEVIENS UN SPIDERMAN</h3>
+                            <p>Remplir les formulaires ci-dessous afin d'avoir ton propre constume</p></div>
+
+                                <div class=" col-4  spide-formulaire text-center">
+                                     <div style="width: 100%; margin: auto;">
+                                        <div class="col">
+                                            <input type="text" class="form-control my-3 mr-3" style="border-radius: 30px; border:1px solid black" placeholder="First name" aria-label="First name">
+                                        </div>
+                                        <div class="col">
+                                            <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
+                                        <div class="col">
+                                            <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
+                                        </div>
+                                        <div class="col">
+                                            <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
+                                        </div>
+                                        <button type="button" class="btn btn-outline-light btn-lg bouton">Light</button></div>
+                                 </div>
+                             </div>
+                            </div>
+
+            </section>
+            <!--dernier section avnt footer-->
+            <section id="image-rouge-spide-noir">
+                <div class="container">
+                    <div class=" " style="padding-top: 10%; ">                        
+                        <h3 >DEVIENS UN SPIDERMAN</h3>
+                        <p>Remplir les formulaires ci-dessous afin d'avoir ton propre constume</p></div>
+
+                        <div class=" col-4 mt-5 spide-formulaire2 text-center">
+                           <!--<div style="width: 100%; margin: auto;">--> 
                             <div class="col">
-                                <input type="text" class="form-control my-3 mr-3" style="border-radius: 30px; border:1px solid black" placeholder="First name" aria-label="First name">
+                                <input type="text" class="form-control my-3 mr-3" style="border-radius: 30px; border:1px solid white ; background: none;" placeholder="First name" aria-label="First name">
                             </div>
                             <div class="col">
-                                <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
-                            <div class="col">
-                                <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
-                            </div>
-                            <div class="col">
-                                <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid black" placeholder="Last name" aria-label="Last name">
-                            </div>
-                            <button type="button" class="btn btn-outline-light btn-lg bouton">Light</button></div>
+                                <input type="text" class="form-control my-3" style="border-radius: 30px; border:1px solid white ; background: none;" placeholder="Last name" aria-label="Last name">
+                            </div> </br>
+                            <button type="button" class="btn btn-light bouton">Light</button></div>
                         </div>
+                      </div>
+                    </div>
+
                 </div>
 
             </section>
@@ -246,7 +275,7 @@ Game, combattant au côté des Avengers.
                 </div>
             </footer>
     </main>
- </header>
+ 
     
 </body>
 </html>
