--- a/heros.html
+++ b/heros.html
@@ -231,8 +231,8 @@
                     <div class="col-md-1"> acceuil</div>
                     <div class="col-md-1"> about</div>
                     <div class="col-md-1">about</div>
-                    <div class="float-end list-inline position-static"><FORM>
-                        <SELECT name="langue" size="1">
+                    <div class="float-end list-inline position-relative"><FORM>
+                        <SELECT name="langue" size="1" id="selecteur">
                         <OPTION>lundi
 
                         </SELECT>
@@ -278,10 +278,10 @@
         <nav>
             <div class="container text-center "> 
                 <div id="logo-facebook">
-                    <img  id="logo-facebook1" src="./assets/images/Logo/logof.png" width="50%" style="background-color:#B11313;"> </li>
-                     <img  id="logo-facebook1"src="./assets/images/Logo/logoi.png" style="background-color:#B11313;"> </li>
-                    <img  id="logo-facebook1" src="./assets/images/Logo/logot.png"style="background-color: #B11313;"> </li>
-                    <img id="logo-facebook1"src="./assets/images/Logo/logof.png" style="background-color:#B11313;"> </li>
+                    <img  id="logo-facebook1" src="./assets/images/Logo/logof.png" width="50%" style="background-color:#114c92;"> </li>
+                     <img  id="logo-facebook1"src="./assets/images/Logo/logoi.png" style="background-color:#114c92;"> </li>
+                    <img  id="logo-facebook1" src="./assets/images/Logo/logot.png"style="background-color:#114c92;"> </li>
+                    <img id="logo-facebook1"src="./assets/images/Logo/logof.png" style="background-color:#114c92;"> </li>
                 </ul>
             </div>
         </nav>
