--- a/heros.html
+++ b/heros.html
@@ -89,13 +89,13 @@
         <section class="section-spide-fondation">
             <div class="container">
                 <h2>Fondations Solide</h2>
-                <h2>De quoi est il vraiment capable</h2>
+                <p>De quoi est il vraiment capable</p>
             </div>
 
         </section>
 
         <!--mise en forme 3em section-->
-        <section class="section3-fond-bleu">
+        <section class="section3-fond-bleu pt-5">
             <div class="container">
                 <div class="row">
                     <div class="row col-12">
@@ -158,6 +158,7 @@
         <!--4em section image multiple fond rouge-->
         <section class="section4-fond-rouge">
             <div class="container-fluid m-0 pt-3 section4">
+                <h2>LES AVENGERS</h2>
                 <div class="row">
                     <div class="row col">
                         <!--on le divise en 2 colonne de col-6-->
@@ -192,8 +193,8 @@
             </div>
         </section>
         <section class="section5">
-            <div class="container-fluid">
-                <div class="section5-background">
+            <div class="container-fluid section5-background">
+                <div >
 
                 </div>
             </div>
