--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Game, combattant au côté des Avengers.
                             <h3 >DEVIENS UN SPIDERMAN</h3>
                             <p>Remplir les formulaires ci-dessous afin d'avoir ton propre constume</p></div>
 
-                                <div class=" col-4  spide-formulaire text-center">
+                                <div class=" col-md-4  spide-formulaire text-center formulaire1">
                                      <div style="width: 100%; margin: auto;">
                                         <div class="col">
                                             <input type="text" class="form-control my-3 mr-3" style="border-radius: 30px; border:1px solid black" placeholder="First name" aria-label="First name">
@@ -216,7 +216,7 @@ Game, combattant au côté des Avengers.
                             <div class="col-md-1"> about</div>
                             <div class="col-md-1">about</div>
                             <div class="float-end list-inline position-static"><FORM>
-                                <SELECT name="langue" size="1">
+                                <SELECT name="langue" size="1"  id="selecteur">
                                 <OPTION>lundi
 
                                 </SELECT>
